--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
       </ul>
       <p>&nbsp;</p>
       <p>
-        <!--Submissions are now closed for oral contributions, but we are accepting poster presentations on a rolling basis.--> <a href="https://easychair.org/cfp/NetNeuro25" > Submit your abstract </a> by February 24th in the format of a one-page pdf with one figure. Posters may be presented at both the satellite and at the main conference.</p>
+        Submissions are now closed for oral contributions, but we are accepting poster presentations on a rolling basis. <a href="https://easychair.org/cfp/NetNeuro25" > Submit your abstract here. </a> 
+        <!-- by February 24th in the format of a one-page pdf with one figure. --> Posters may be presented at both the satellite and at the main conference.</p>
       <p>&nbsp;</p>
       <p>Note that you must register for NetSci to attend (there is an option to select only the satellite sessions and school) and the early bird registration deadline is March 6th. <br>
         <br>
@@ -187,48 +188,65 @@
 <section id="schedule" class="services section-bg">
   <div class="container">
     <div class="section-title">
-      <h2>Schedule: Coming soon</h2>
+      <h2>Schedule</h2>
       <p> Network Neuroscience 2025 will be held on Monday 2nd June in Maastricht as a satellite of the <a href="https://netsci2025.github.io/">International School and Conference on Network Science</a> (NetSci 2025). <!--Find us in Room 206B.--></p> <br>
 
-<!--
+
 <p style="background-color:#DCDCDC">
 <b>Registration</b> 
 </p>
 <p> <br>
 9:00am: Opening remarks <br>
-9:15am: <b>Using deep neural networks to model neurodegenerative diseases in silico</b> <br><i>Nils Forkert</i><br>
-9:45am: <b>Entropic measures for diverse specialization in structural connectomes</b><br><i><u>Sung Soo Moon</u>, E. Marin, T. St&uuml;rner, D. Krzemi&nacute;ski, P. Schlegel, Janelia FlyEM Project Team, G. Jefferis, and S. Ahnert.</i><br>
-10:00am: <b>Power-law tailed weight distributions in connectome graphs</b><br><i> <u>Geza Odor</u>, Istvan Papp, Jeffrey Kelling, Deco Gustavo, and Michael Gastner.</i><br><br> </p>
+9:10am: <b>Modelling brain state dynamics in health and pathology</b> <br><i>Sonja Kotz</i><br>
+
+
+9:55am: <b>Interpretable geometric representations of neural dynamics</b><br><i><u>Martin Guillemaud</u>, Alice Longhena, Louis Cousyn, Valerio Frazzini, Bertrand Mathon, Vincent Navarro, and Mario Chavez Adam Gosztolai.</i><br>
+
+
+10:10am: <b>Redundancy-dominated modular structure of the human brain and its relationship with aging</b><br><i> <u>Maria Grazia Puxeddu</u>, Maria Pope, Thomas Varley, Joshua Faskowitz, and Olaf Sporns.</i><br></p>
+
+10:25am: <b>Nonequilibrium brain network dynamics</b><br><i> <u>Ramón Nartallo-Kaluarachchi</u>.</i><br><br> </p>
 
 <p style="background-color:#DCDCDC">
-10:15am: <b>Coffee Break</b> <br>
+10:40am: <b>Coffee Break and Posters</b> <br>
 </p><br>
 
-11:00am:  <b>Information transmission in mammalian brain networks</b><br><i>Enrico Amico</i><br> 
-11:30am:  <b>Emergence of metastability in frustrated oscillatory networks: the key role of hierarchical modularity</b><br><i><u>Enrico Caprioglio</u> and Luc Berthouze.</i> <br>
-11:45am: <b>Situating edge time series within the generalized linear model framework</b><br><i><u>Haily Merritt</u>, Amanda Mejia, and Richard Betzel.</i></p>
-12:00pm:  <b>A simulated annealing algorithm for randomizing weighted networks</b><br><i><u>Filip Milisav</u>, Vincent Bazinet, Richard Betzel, and Bratislav Misic.</i> <br><br>
+11:00am:  <b>TBC</b><br><i>Martijn van den Heuvel</i><br> 
 
-<p style="background-color:#DCDCDC">
-12:30pm:  <b>Lunch Break</b> <br>
-</p><br>
-2:30pm:  <b>System segregation in brain networks underpins the capacity for learning across the human lifespan</b><br><i>Javeria Ali Hashmi</i> <br> </p>
-3:00pm:  <b>Subtle differences in network architecture of very preterm born children</b><br><i><u>David Vanier</u>, Hongye Wang, Amanda Ip, Shelly Yin, Kirk Graff, Ryann Tansey, Xining Chen, Signe Bray, and Emma K. Towlson.</i> <br>
-3:15pm:  <b>Structural and functional connectivity predicts MRgFUS thalamotomy outcome in Parkinson's disease</b><br><i><u>Alberto Cacciola</u>, Gianpaolo Basile, Giuseppe Acri, Lilla Bonanno, Augusto Ielo, Silvia Marino, Amelia Brigandì, Chiara Sorbera, Rosa Morabito, Giuseppe Di Lorenzo, Antonio Cerasa, and Angelo Quartarone.</i> <br>
-3:30pm:  <b>Structural and functional analysis of cognitive integration and segregation within aging human connectomes</b><br><i><u> Drew Patton</u> and Joern Davidsen.</i> <br><br>
+11:45am:  <b>Emergence of brain-like complex network architecture in artificial neural networks</b><br>Chris Kang, Jasmine Moore, Samuel Robertson, Matthias Wilms, <i><u>Emma Towlson</u>*, and Nils Forkert*. *These authors contributed equally</i> <br>
+
+12:00pm: <b>The global communication pathways of the human brain transcend the cortical - subcortical - cerebellar division</b><br><i><u>Julian Schulte</u>, Mario Senden, Xenia Kobeleva, and Gorka Zamora-López.</i></p>
+
+12:15pm:  <b>Stroke-Induced Network Disruptions in Brain Communication Dynamics: Linking Structural Disconnection to Processing Speed</b><br><i><u>Maedeh Khalilian</u>, Amir Mousavi, Martine Roussel, Olivier Godefroy, and Ardalan Aarabi.</i> <br><br>
+
+
+
 
 <p style="background-color:#DCDCDC">
-3:45pm:  <b>Coffee Break</b> <br>
+12:30pm:  <b>Lunch Break and Posters</b> <br>
 </p><br>
-4:30pm:  <b>Neuroblox Circuits: Leveraging Biomimetic Computational Primitives to Elicit Emergent Corticostriatal Learning</b><br><i>Lilianne R. Mujica-Parodi</i> <br>
-5:00pm:  <b>Higher-order connectomics of human brain function reveals local topological signatures of task decoding, individual identification, and behavior</b><br><i><u>Andrea Santoro</u>, Federico Battiston, Maxime Lucas, Giovanni Petri, and Enrico Amico.</i> <br>
-5:15pm:  <b>Brain network controllability during development</b><br><i><u>Hongye Wang</u>, David Vanier, Shefali Rai, Kate Godfrey, Shelly Yin, Kirk Graff, Ryann Tansey, Xining Chen, Signe Bray, and Emma K. Towlson.</i> <br>
+2:00pm:  <b>TBC</b><br><i>Athena Demertzi</i> <br> </p>
+
+2:45pm:  <b>Inferring higher-order networks from miscroscale neuronal activity</b><br><i><u>Andrea Civilini</u>, Fabrizio De Vico Fallani and Vito Latora.</i> <br>
+
+3:00pm:  <b>Phase-Specific Variations in Brain Network Connectivity with Ovarian Hormones</b><br><i><u>Fatemeh Soleymani Moghadam</u>, Xining Chen, Lisa Feldman Barrett, Joseph Andreano, and Emma K. Towlson.</i> <br>
+3:15pm:  <b>The metric backbone of brain networks across lifespan and hemispheres</b><br><i><u>Felipe Xavier Costa</u>, Olaf Sporns, and Luis M. Rocha.</i> <br><br>
+
+<p style="background-color:#DCDCDC">
+3:30pm:  <b>Coffee Break and Posters</b> <br>
+</p><br>
+4:00pm:  <b>Multiscale Cortical Connectivity in the Human Brain with Magnetic Resonance Imaging and Light Sheet Microscopy</b><br><i>Alard Roebroeck</i> <br>
+
+4:45pm:  <b>Uncovering heritable vs shared environment in human brain functional networks</b><br><i><u>Tanu Raghav</u>, Uttara Tipnis, Julie Benny, Daniel Guerrero, Mintao Liu, Jaroslaw Harezlak, and Joaquín Goñi.</i> <br>
+5:00`pm:  <b>Probabilistic network alignment applied to brain connectomes</b><br><i><u>Teresa Lázaro Sánchez</u>, Marta Sales-Pardo, and Roger Guimerà.</i> <br>
+5:15pm:  <b>Functional connectivity alterations in neuronal networks derived from individuals with schizophrenia</b><br><i><u>Zahra Yazdani</u>, Niraj Patel, Anne-Sophie Roy, Mohamed Haouet, Erik Belanger, Pierre Marquet, Antoine Allard and Patrick Desrosiers.</i> <br>
+
 5:30pm: Closing remarks <br><br>
 
 <p style="background-color:#DCDCDC">
-5:45pm - 6:30pm:  <b>Poster Session</b> <br>
+5:40pm - 6:30pm:  <b>Poster Session</b> <br>
 </p><br>
-<b>Differential Patterns of Associations within Audiovisual Integration Networks in Children with ADHD</b>. <i><u>Fatemeh Bakouie</u>, Mohammad Zamanzadeh Nasrabadi, Abbass Pourhedayat, and Fatemeh Hadaeghi.</i><br>
+<!--<b>Differential Patterns of Associations within Audiovisual Integration Networks in Children with ADHD</b>. <i><u>Fatemeh Bakouie</u>, Mohammad Zamanzadeh Nasrabadi, Abbass Pourhedayat, and Fatemeh Hadaeghi.</i><br>
 <b>Increasing robustness and reproducibility in network neuroscience through multiverse analysis – The Comet toolbox</b>. <u><i>Micha Burkhardt</u> and Carsten Giessing.</i><br>
 <b>Detection of local connectivity perturbations of networks on a latent hyperbolic space</b>. <i><u>Alice Longhena</u>, Martin Guillemaud, and Mario Chavez.</i><br>
 <b>Emergence of a synergistic scaffold in the brains of human infants</b>. <u><i>Thomas Varley</u>, Olaf Sporns, Nathan Stevenson, Martha Welch, Michael Myers, Vanhatalo Sampsa, and Anton Tokariev.</i><br>
@@ -238,14 +256,40 @@
 <b>Modelling the Complexity of Treatment Resistant Depression using Markov Random Fields</b>. <u><i>Alice Erchov</u>, Downar Jonathan, Daniel Blumberger, and Fidel Vila-Rodriguez.</i><br>
 <b>Network spreading and local biological vulnerability in amyotrophic lateral sclerosis</b>. <i><u>Asa Farahani</u> and Bratislav Misic.</i><br>
 <b>Functional brain network interaction changes across the ovarian cycle</b>. <i><u>Xining Chen</u>, Joespeh Andreano, Abigail Giancola, Sophia Tchir, and Emma K. Towlson.</i><br>
-<b>Combined topological and spatial constraints are required to capture the structure of neural connectomes</b>. <i><u>Anastasiya Salova</u> and Istvan Kovacs.</i>
+<b>Combined topological and spatial constraints are required to capture the structure of neural connectomes</b>. <i><u>Anastasiya Salova</u> and Istvan Kovacs.</i>-->
 
+<p align="left">
 
-<br><br>
+<b>1. Modeling Motor and Processing Speed in Stroke Patients Using Kuramoto Dynamics</b>. <i><u>Amir Mousavi</u>, Maedeh Khalilian, Martine Roussel, Olivier Godefroy, and Ardalan Aarabi.</i><br>
+<b>2. Model-based Alignment of Developing Connectomes</b>. <i><u>Gemma Bel-Bordes</u>, Roger Guimerà, and Marta Sales-Pardo.</i><br>
+<b>3. Kinematic and muscle networks reveal the modular control of sit-to-stand movements</b>. <i><u>Emahnuel Troisi Lopez</u>, Ramon Boekesteijn, Roberta Minino,
+Pierpaolo Sorrentino, Kenneth Meijer, and Tjeerd Boonstra.</i><br>
+<b>4. Desynchronisation of spatiotemporal brain organisation across psychedelic compounds</b>. <i><u>Pablo Mallaroni</u>, Parker Singleton, Natasha Mason, Theodore
+Satterthwaite, and Johannes Ramaekers.</i><br>
+<b>5. Short-term memory in modular neuronal networks in vitro</b>. <i><u>Vaiva Vasiliauskaitė</u>, Giulia Amos, Benedikt Maurer, Joel
+Küchler, and Janos Vörös.</i><br>
+<b>6. Brain volume predicts survival of colliding-spreading messages on mammal brain networks</b>. <i><u>Yan Hao</u>, Tate Tower, Hannah Lax, Marc-Thorsten Hütt, and
+Daniel Graham.</i><br>
+<b>7. From sequential to relational data: From Multivariate Time Series to Signed Brain Networks</b>. <i><u>Marzio Di Vece</u>, Emanuele Agrimi, Samuele Tatullo, Tommaso Gili, Miguel Ibanez-Berganza, and Tiziano Squartini.</i><br>
+<b>8. Synergistic information processing as the mechanism for long-range correlations in the brain</b>. <i><u>Hardik Rajpal</u>,, Cedric Stefens, Meghdad Saeedian, Joe Canzano, Mauricio Barahona, Simon Schultz, Spencer Smith, and Henrik Jeldtoft Jensen.</i><br>
+<b>9. The Human Brain as a Combinatorial Complex</b>. <i><u>Valentina Sánchez</u>, Koen Haak, Çiçek Güven, Gonzalo Nápoles, and Marie Šafář Postma.</i><br>
+<b>10. Glioblastoma disrupts information flow in in vitro neuronal circuits</b>. <i><u>Giulia Amos</u>, Luc Jordi, Karan Ahuja, Alexandra Gerber,
+Gregor Hutter, János Vörös, Christina Tringides, and Vaiva Vasiliauskaite.</i><br>
+<b>11. Brain structural-functional coupling is differentially affected by age, sex, and amyloid burden in older individuals without dementia</b>. <i><u>Prithvi Arunachalam</u>, Francesca Treves, Leonard Pieperhoff, Luigi Lorenzini, Mario Tranfa, Federico Masserini, Maria G. Preti, Giuseppe Pontillo, Lyduine E. Collij, Tommy A. A. Broeders, Menno M. Schoonheim, Linda Douw, Craig Ritchie, Mercè Boada, Marta Marquié, Pieter Jelle Visser, Juan Domingo Gispert, James H. Cole, Frederik Barkhof, and Alle Meije Wink.</i><br>
+<b>12. The Virtual Brain reveals sweet dynamics of deep brain stimulation in Parkinson’s disease</b>. <i><u>Jil Meier</u>, Marius Pille, Leon Martin, Timo Hofsähs, Anaïs Halimi, Johannes Busch, Lucia Feldmann, Roxanne Lofredi, Patricia Krause, Andrea Kühn, and Petra Ritter.</i><br>
+<b>13. Sparse functional connectomes reveal backbone structures associated with individual fingerprinting</b>. <i><u>Daniel Guerrero</u>, Mintao Liu, Tanu Raghav, Mahdi Moghadam, Yujing Zhang, Jaroslaw Harezlak, and Joaquín Goñi.</i><br>
+<b>14. Synergistic Motifs in Gaussian Systems</b>. <i><u>Enrico Caprioglio</u> and Luc Berthouze.</i><br>
+<b>15. Multivariate Directed Functional Connectivity Methods for Estimation of Whole-Brain Connectivity</b>. <i><u>Katja Törmä</u>, Jari Hyttinen, and Narayan Puthanmadam Subramaniyam.</i><br>
+<b>16. Connectome brain fingerprinting: terminology, measures, and target properties</b>. <i><u>Matteo Fraschini</u>, Matteo Demuru, Daniele Marinazzo, and Luca
+Didaci.</i><br>
+<b>17. Developmental Trajectories of Thalamocortical Connectivity from Childhood to Young Adulthood</b>. <i><u>Alexandra John</u>, Alfred Anwander, Aikaterina Manoli, Amin Saberi, Bin Wan, Boris Bernhardt, and Sofie L. Valk.</i><br>
+<b>18. Epileptic spike- coupled sleep oscillations in the orbitofrontal cortex, hippocampus, and thalamus predict disrupted memory consolidation</b>. <i><u>Anirudh Wodeyar</u>, Dhinakaran Chinappen, Hunki Kwon, Wen Shi, Mark A. Kramer, and Catherine J. Chu.</i><br>
+<b>19. Optimized Multilayer Graphs for Integrating Functional and Structural Connectivity in Alzheimer’s Disease Classification</b>. <i><u>Carlo Ferritto</u>, Pierre-Yves Jonin, Giulia Lioi, and Julie Coloigner.</i><br>
+<b>20. Detecting critical transitions in neuronal systems</b>. <i><u>Narayan Puthanmadam Subramaniyam</u> and Jari Hyttinen.</i><br>
           </p>
     
-   -->
-   </div> <!-- this may need removing when add schedule --> 
+   
+   <!--</div> so I removed, not carefully checked --> <!-- this may need removing when add schedule --> 
   </div>
 </section>
 <!-- End Services Section --> 
