--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
   <div class="container">
     <div class="section-title">
       <h2>Schedule</h2>
-      <p> Network Neuroscience 2025 will be held on Monday 2nd June in Maastricht as a satellite of the <a href="https://netsci2025.github.io/">International School and Conference on Network Science</a> (NetSci 2025). <!--Find us in Room 206B.--></p> <br>
+      <p> Network Neuroscience 2025 will be held on Monday 2nd June in Maastricht as a satellite of the <a href="https://netsci2025.github.io/">International School and Conference on Network Science</a> (NetSci 2025). Find us at the Faculty of Arts & Social Sciences (<a href="https://maps.app.goo.gl/Es4gXeNqmXDfCEC47">Google maps location here</a>).</p> <br>
 
 
 <p style="background-color:#DCDCDC">
@@ -200,7 +200,7 @@
 9:10am: <b>Modelling brain state dynamics in health and pathology</b> <br><i>Sonja Kotz</i><br>
 
 
-9:55am: <b>Interpretable geometric representations of neural dynamics</b><br><i><u>Martin Guillemaud</u>, Alice Longhena, Louis Cousyn, Valerio Frazzini, Bertrand Mathon, Vincent Navarro, and Mario Chavez Adam Gosztolai.</i><br>
+9:55am: <b>Stroke-Induced Network Disruptions in Brain Communication Dynamics: Linking Structural Disconnection to Processing Speed</b><br><i><u>Maedeh Khalilian</u>, Amir Mousavi, Martine Roussel, Olivier Godefroy, and Ardalan Aarabi.</i> <br>
 
 
 10:10am: <b>Redundancy-dominated modular structure of the human brain and its relationship with aging</b><br><i> <u>Maria Grazia Puxeddu</u>, Maria Pope, Thomas Varley, Joshua Faskowitz, and Olaf Sporns.</i><br></p>
@@ -213,11 +213,13 @@
 
 11:00am:  <b>TBC</b><br><i>Martijn van den Heuvel</i><br> 
 
-11:45am:  <b>Emergence of brain-like complex network architecture in artificial neural networks</b><br>Chris Kang, Jasmine Moore, Samuel Robertson, Matthias Wilms, <i><u>Emma Towlson</u>*, and Nils Forkert*. *These authors contributed equally</i> <br>
+11:45am:  <b>Emergence of brain-like complex network architecture in artificial neural networks</b><br>Chris Kang, Jasmine Moore, Samuel Robertson, Matthias Wilms, <i><u>Emma K. Towlson</u>*, and Nils Forkert*. *These authors contributed equally</i> <br>
 
-12:00pm: <b>The global communication pathways of the human brain transcend the cortical - subcortical - cerebellar division</b><br><i><u>Julian Schulte</u>, Mario Senden, Xenia Kobeleva, and Gorka Zamora-López.</i></p>
+12:00pm: <b>The global communication pathways of the human brain transcend the cortical - subcortical - cerebellar division</b><br><i>Julian Schulte, Mario Senden, Xenia Kobeleva, and <u>Gorka Zamora-López</u>.</i></p>
 
-12:15pm:  <b>Stroke-Induced Network Disruptions in Brain Communication Dynamics: Linking Structural Disconnection to Processing Speed</b><br><i><u>Maedeh Khalilian</u>, Amir Mousavi, Martine Roussel, Olivier Godefroy, and Ardalan Aarabi.</i> <br><br>
+12:15pm:  <b>Interpretable geometric representations of neural dynamics</b><br><i><u>Martin Guillemaud</u>, Alice Longhena, Louis Cousyn, Valerio Frazzini, Bertrand Mathon, Vincent Navarro, and Mario Chavez Adam Gosztolai.</i><br>
+
+<br>
 
 
 
@@ -239,24 +241,13 @@
 
 4:45pm:  <b>Uncovering heritable vs shared environment in human brain functional networks</b><br><i><u>Tanu Raghav</u>, Uttara Tipnis, Julie Benny, Daniel Guerrero, Mintao Liu, Jaroslaw Harezlak, and Joaquín Goñi.</i> <br>
 5:00`pm:  <b>Probabilistic network alignment applied to brain connectomes</b><br><i><u>Teresa Lázaro Sánchez</u>, Marta Sales-Pardo, and Roger Guimerà.</i> <br>
-5:15pm:  <b>Functional connectivity alterations in neuronal networks derived from individuals with schizophrenia</b><br><i><u>Zahra Yazdani</u>, Niraj Patel, Anne-Sophie Roy, Mohamed Haouet, Erik Belanger, Pierre Marquet, Antoine Allard and Patrick Desrosiers.</i> <br>
+<!-- 5:15pm:  <b>Functional connectivity alterations in neuronal networks derived from individuals with schizophrenia</b><br><i><u>Zahra Yazdani</u>, Niraj Patel, Anne-Sophie Roy, Mohamed Haouet, Erik Belanger, Pierre Marquet, Antoine Allard and Patrick Desrosiers.</i> <br> -->
 
-5:30pm: Closing remarks <br><br>
+5:15pm: Closing remarks <br><br>
 
 <p style="background-color:#DCDCDC">
-5:40pm - 6:30pm:  <b>Poster Session</b> <br>
+5:30pm - 6:30pm:  <b>Poster Session</b> <br>
 </p><br>
-<!--<b>Differential Patterns of Associations within Audiovisual Integration Networks in Children with ADHD</b>. <i><u>Fatemeh Bakouie</u>, Mohammad Zamanzadeh Nasrabadi, Abbass Pourhedayat, and Fatemeh Hadaeghi.</i><br>
-<b>Increasing robustness and reproducibility in network neuroscience through multiverse analysis – The Comet toolbox</b>. <u><i>Micha Burkhardt</u> and Carsten Giessing.</i><br>
-<b>Detection of local connectivity perturbations of networks on a latent hyperbolic space</b>. <i><u>Alice Longhena</u>, Martin Guillemaud, and Mario Chavez.</i><br>
-<b>Emergence of a synergistic scaffold in the brains of human infants</b>. <u><i>Thomas Varley</u>, Olaf Sporns, Nathan Stevenson, Martha Welch, Michael Myers, Vanhatalo Sampsa, and Anton Tokariev.</i><br>
-<b>Enhancing Memory Capacity in Reservoir Computing with Brain-Inspired Connectivity Patterns Through Asymmetry</b>.<u> <i>Fatemeh Hadaeghi</u> and Claus Hilgetag.</i><br>
-<b>Time-varying synergy/redundancy dominance in the human cerebral cortex</b>. <u><i>Maria Pope</u>, Thomas Varley, and Olaf Sporns.</i><br>
-<b>Learning and stabilizing memories in noisy recurrent spiking neural networks</b>. <u><i>Arshia Razavi</u> and Javier G. Orlandi</i>.<br>
-<b>Modelling the Complexity of Treatment Resistant Depression using Markov Random Fields</b>. <u><i>Alice Erchov</u>, Downar Jonathan, Daniel Blumberger, and Fidel Vila-Rodriguez.</i><br>
-<b>Network spreading and local biological vulnerability in amyotrophic lateral sclerosis</b>. <i><u>Asa Farahani</u> and Bratislav Misic.</i><br>
-<b>Functional brain network interaction changes across the ovarian cycle</b>. <i><u>Xining Chen</u>, Joespeh Andreano, Abigail Giancola, Sophia Tchir, and Emma K. Towlson.</i><br>
-<b>Combined topological and spatial constraints are required to capture the structure of neural connectomes</b>. <i><u>Anastasiya Salova</u> and Istvan Kovacs.</i>-->
 
 <p align="left">
 
@@ -368,12 +359,12 @@ VU Amsterdam
 
                         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/athena.jpg" alt="">
+              <img src="assets/img/athena-2.jpeg" alt="">
               <h4>Athena Demertzi</h4>
               <span>
-GIGA Neurosciences - Physiology of Cognition</span>
+GIGA CRC Human Imaging Center</span>
               <p>
-          Département des sciences cliniques, Faculté de Médecine, Université de Liège
+          Faculty of Medicine, University of Liège
               </p>
               <div class="social">
                 <a href="https://www.gigaphysiologycognition.uliege.be/cms/c_5288768/en/gigaphysiologycognition?id=c_5288768"><i class="bx bx-link"></i></a>
