--- a/index.html
+++ b/index.html
@@ -193,57 +193,8 @@
 
 
 <p style="background-color:#DCDCDC">
-<b>Registration</b> 
-</p>
-<p> <br>
-9:00am: Opening remarks <br>
-9:10am: <b>Modelling brain state dynamics in health and pathology</b> <br><i>Sonja Kotz</i><br>
+<b> TBD</b>
 
-
-9:55am: <b>Stroke-Induced Network Disruptions in Brain Communication Dynamics: Linking Structural Disconnection to Processing Speed</b><br><i><u>Maedeh Khalilian</u>, Amir Mousavi, Martine Roussel, Olivier Godefroy, and Ardalan Aarabi.</i> <br>
-
-
-10:10am: <b>Redundancy-dominated modular structure of the human brain and its relationship with aging</b><br><i> <u>Maria Grazia Puxeddu</u>, Maria Pope, Thomas Varley, Joshua Faskowitz, and Olaf Sporns.</i><br></p>
-
-10:25am: <b>Nonequilibrium brain network dynamics</b><br><i> <u>Ramón Nartallo-Kaluarachchi</u>.</i><br><br> </p>
-
-<p style="background-color:#DCDCDC">
-10:40am: <b>Coffee Break and Posters</b> <br>
-</p><br>
-
-11:00am:  <b>TBC</b><br><i>Martijn van den Heuvel</i><br> 
-
-11:45am:  <b>Emergence of brain-like complex network architecture in artificial neural networks</b><br>Chris Kang, Jasmine Moore, Samuel Robertson, Matthias Wilms, <i><u>Emma K. Towlson</u>*, and Nils Forkert*. *These authors contributed equally</i> <br>
-
-12:00pm: <b>The global communication pathways of the human brain transcend the cortical - subcortical - cerebellar division</b><br><i>Julian Schulte, Mario Senden, Xenia Kobeleva, and <u>Gorka Zamora-López</u>.</i></p>
-
-12:15pm:  <b>Interpretable geometric representations of neural dynamics</b><br><i><u>Martin Guillemaud</u>, Alice Longhena, Louis Cousyn, Valerio Frazzini, Bertrand Mathon, Vincent Navarro, and Mario Chavez Adam Gosztolai.</i><br>
-
-<br>
-
-
-
-
-<p style="background-color:#DCDCDC">
-12:30pm:  <b>Lunch Break and Posters</b> <br>
-</p><br>
-2:00pm:  <b>TBC</b><br><i>Athena Demertzi</i> <br> </p>
-
-2:45pm:  <b>Inferring higher-order networks from miscroscale neuronal activity</b><br><i><u>Andrea Civilini</u>, Fabrizio De Vico Fallani and Vito Latora.</i> <br>
-
-3:00pm:  <b>Phase-Specific Variations in Brain Network Connectivity with Ovarian Hormones</b><br><i><u>Fatemeh Soleymani Moghadam</u>, Xining Chen, Lisa Feldman Barrett, Joseph Andreano, and Emma K. Towlson.</i> <br>
-3:15pm:  <b>The metric backbone of brain networks across lifespan and hemispheres</b><br><i><u>Felipe Xavier Costa</u>, Olaf Sporns, and Luis M. Rocha.</i> <br><br>
-
-<p style="background-color:#DCDCDC">
-3:30pm:  <b>Coffee Break and Posters</b> <br>
-</p><br>
-4:00pm:  <b>Multiscale Cortical Connectivity in the Human Brain with Magnetic Resonance Imaging and Light Sheet Microscopy</b><br><i>Alard Roebroeck</i> <br>
-
-4:45pm:  <b>Uncovering heritable vs shared environment in human brain functional networks</b><br><i><u>Tanu Raghav</u>, Uttara Tipnis, Julie Benny, Daniel Guerrero, Mintao Liu, Jaroslaw Harezlak, and Joaquín Goñi.</i> <br>
-5:00`pm:  <b>Probabilistic network alignment applied to brain connectomes</b><br><i><u>Teresa Lázaro Sánchez</u>, Marta Sales-Pardo, and Roger Guimerà.</i> <br>
-<!-- 5:15pm:  <b>Functional connectivity alterations in neuronal networks derived from individuals with schizophrenia</b><br><i><u>Zahra Yazdani</u>, Niraj Patel, Anne-Sophie Roy, Mohamed Haouet, Erik Belanger, Pierre Marquet, Antoine Allard and Patrick Desrosiers.</i> <br> -->
-
-5:15pm: Closing remarks <br><br>
 
 <p style="background-color:#DCDCDC">
 5:30pm - 6:30pm:  <b>Poster Session</b> <br>
