--- a/index.html
+++ b/index.html
@@ -379,6 +379,20 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <img src="assets/img/Brynildsen.jpg" alt="">
+              <h4>Kate Brynildsen</h4>
+              <span>University of Pennsylvania</span>
+              <p>
+                
+              </p>
+              <div class="social">
+                <a href="https://www.researchgate.net/profile/Julia-kate-Brynildsen"><i class="bi bi-twitter"></i></a>
+              </div>
+            </div>
+          </div>
+
           
 
 
