--- a/index.html
+++ b/index.html
@@ -393,6 +393,20 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <img src="assets/img/Alexandersen.jpg" alt="">
+              <h4>Christoffer Alexandersen</h4>
+              <span>University of Pennsylvania</span>
+              <p>
+                
+              </p>
+              <div class="social">
+                <a href="https://christofferalexandersen.com/"><i class="bi bi-twitter"></i></a>
+              </div>
+            </div>
+          </div>
+
           
 
 
