--- a/index.html
+++ b/index.html
@@ -388,21 +388,21 @@
                 
               </p>
               <div class="social">
-                <a href="https://www.researchgate.net/profile/Julia-kate-Brynildsen"><i class="bi bi-twitter"></i></a>
+                <a href="https://www.researchgate.net/profile/Julia-kate-Brynildsen"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/Alexandersen.jpg" alt="">
+              <img src="assets/img/Alexandersen.jpeg" alt="">
               <h4>Christoffer Alexandersen</h4>
               <span>University of Pennsylvania</span>
               <p>
                 
               </p>
               <div class="social">
-                <a href="https://christofferalexandersen.com/"><i class="bi bi-twitter"></i></a>
+                <a href="https://christofferalexandersen.com/"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
