--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       </ul>
       <p>&nbsp;</p>
       <p>
-        Submissions are open for oral contributions and poster presentations. Submit your abstract <a href="https://easychair.org/my2/conference?conf=netneuro26">here</a> by February 27th in the format of a one-page pdf with one figure. </a> 
+        Submissions are open for oral contributions and poster presentations. <a href="https://easychair.org/my2/conference?conf=netneuro26">Submit your abstract here</a> by February 27th in the format of a one-page pdf with one figure. </a> 
         <!-- by February 24th in the format of a one-page pdf with one figure. --> Posters may be presented at both the satellite and at the main conference.</p>
       <p>&nbsp;</p>
       <p>Note that you must register for NetSci to attend (there is an option to select only the satellite sessions and school) and the early bird registration deadline is March 20th. <br>
