--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       </ul>
       <p>&nbsp;</p>
       <p>
-        Submissions will be opening soon for oral contributions and poster presentations. Submit your abstract here by February 27th in the format of a one-page pdf with one figure. </a> 
+        Submissions will be opening soon for oral contributions and poster presentations. Submit your abstract here by March 6th in the format of a one-page pdf with one figure. </a> 
         <!-- by February 24th in the format of a one-page pdf with one figure. --> Posters may be presented at both the satellite and at the main conference.</p>
       <p>&nbsp;</p>
       <p>Note that you must register for NetSci to attend (there is an option to select only the satellite sessions and school) and the early bird registration deadline is March 20th. <br>
@@ -324,7 +324,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/mariapuxeddu.jpeg" alt="">
-              <h4>Mria Grazia Puxeddu</h4>
+              <h4>Maria Grazia Puxeddu</h4>
               <span>School of Neuroscience, Virginia Tech</span>
               <p>
               </p>
